--- a/src/main/webapp/react/recipe/index.html
+++ b/src/main/webapp/react/recipe/index.html
@@ -16,15 +16,23 @@
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-router-dom@5.2.0/umd/react-router-dom.min.js"></script>
 
-<script src="courses/course-service.js" type="text/jsx" data-type="module" data-plugins="transform-modules-umd"></script>
-<script src="courses/course-editor-inline.js" type="text/jsx" data-type="module" data-plugins="transform-modules-umd"></script>
-<script src="courses/course-list.js" type="text/jsx" data-type="module" data-plugins="transform-modules-umd"></script>
-<script src="courses/course-editor-form.js" type="text/jsx" data-type="module" data-plugins="transform-modules-umd"></script>
+<script src="recipes/recipe-service.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
+<script src="recipes/recipe-editor-inline.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
+<script src="recipes/recipe-list.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
+<script src="recipes/recipe-editor-form.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
 
-<script src="sections/section-service.js" type="text/jsx" data-type="module" data-plugins="transform-modules-umd"></script>
-<script src="sections/section-editor-inline.js" type="text/jsx" data-type="module" data-plugins="transform-modules-umd"></script>
-<script src="sections/section-list.js" type="text/jsx" data-type="module" data-plugins="transform-modules-umd"></script>
-<script src="sections/section-editor-form.js" type="text/jsx" data-type="module" data-plugins="transform-modules-umd"></script>
+<script src="ingredients/ingredient-service.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
+<script src="ingredients/ingredient-editor-inline.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
+<script src="ingredients/ingredient-list.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
+<script src="ingredients/ingredient-editor-form.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
 
 <script src="index.js" type="text/jsx" data-type="module" data-plugins="transform-modules-umd"></script>
 <script type="text/jsx" data-type="module" data-plugins="transform-modules-umd">
