--- a/src/main/webapp/react/recipe/index.html
+++ b/src/main/webapp/react/recipe/index.html
@@ -16,6 +16,15 @@
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-router-dom@5.2.0/umd/react-router-dom.min.js"></script>
 
+<script src="users/user-service.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
+<script src="users/user-editor-inline.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
+<script src="users/user-list.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
+<script src="users/user-editor-form.js" type="text/jsx" data-type="module"
+        data-plugins="transform-modules-umd"></script>
+
 <script src="recipes/recipe-service.js" type="text/jsx" data-type="module"
         data-plugins="transform-modules-umd"></script>
 <script src="recipes/recipe-editor-inline.js" type="text/jsx" data-type="module"
